Add extensive app functionality and assets
Implemented multiple new features and pages, including Home, Posts, Project, CreateProject, ShortcutUrlGenerator, and User, enhancing the application's functionality significantly. This update introduces Firebase integration for storage, authentication, and database operations, supporting features like project creation and management, user authentication via Google, and URL shortening services.

Included are also various asset updates, such as new logos, icons, splash screens for Apple devices, and updates to the manifest for a comprehensive PWA experience. The `.gitignore` was updated to exclude Firebase-related sensitive files and additional development environment files.

This commit represents a major enhancement in both functionality and user experience, laying a foundation for a robust, dynamic web application. It also sets the stage for future expansion and introduces potential areas for user interaction and content management within the application.

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,19 @@
 # production
 /build
 
+# firebase
+/.firebase
+.firebaserc
+firebase.json
+database.rules.json
+firestore.indexes.json
+firestore.rules
+storage.rules
+
 # misc
+/.github
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
