--- a/public/manifest.json
+++ b/public/manifest.json
@@ -30,6 +30,7 @@
   ],
   "start_url": ".",
   "display": "standalone",
+  "orientation": "portrait",
   "theme_color": "#ffffff",
   "background_color": "#ffffff"
 }
