--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-spring/web": "^9.7.5",
+    "@react-three/fiber": "^8.17.10",
     "@reduxjs/toolkit": "^2.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -27,9 +29,10 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-type-animation": "^3.2.0",
     "redux": "^5.0.1",
     "sass": "^1.79.4",
-    "typescript": "^5.6.3",
+    "three": "^0.170.0",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
     "workbox-broadcast-update": "^6.6.0",
@@ -69,5 +72,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-type-animation": "^1.1.4",
+    "@types/three": "^0.170.0",
+    "typescript": "^4.9.5"
   }
 }
