Add Firebase functions and improve user interface
Feature Enhancement/Addition:
- Introduces a new Firebase function for URL redirection, adding support for retrieving the original URL via short code with error handling for not found or server issues.
- Implements a `usePosts` hook for managing posts within the Firestore database with live updates on changes.

Dependencies Update:
- Updates `firebase-admin` and `firebase-functions` to the latest versions ensuring compatibility with newly added functionalities.
- Implements Firebase emulator configurations for local development to connect Firestore and functions.

UI Adjustments:
- Enables the disabled New Year countdown and snow effect features within the React app.
- Modifies z-index in several components (e.g., fireworks, header) for improved layering and visibility.
- Adjusts the Apple startup splash images to correct paths for local development.

General Improvements:
- Adds `.gitignore` file to prevent committing `node_modules` and local configuration files.
- Updates package and package-lock files with dependency adjustments to maintain build stability.
- Refines CSS and SCSS styles across several components to meet design requirements and enhance user experience.

Localization:
- Extends translation files with new terms related to the Shortcut URL Generator and alert messages.

These comprehensive updates streamline user interactions, enhance frontend aesthetics, and ensure robust backend operations.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-i18next": "^8.1.0",
     "@types/react-router-dom": "^5.3.3",
     "firebase": "^11.0.1",
+    "firebase-functions": "^6.2.0",
     "i18next": "^23.16.4",
     "i18next-browser-languagedetector": "^8.0.0",
     "matter-js": "^0.20.0",
@@ -68,7 +69,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "firebase deploy --only hosting",
-    "build-deploy": "npm run build && npm run deploy"
+    "build-deploy": "npm run build && npm run deploy",
+    "serve": "npm run build && firebase emulators:start"
   },
   "eslintConfig": {
     "extends": [
