--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,25 +4,25 @@
   "id": "com.johnlin.me",
   "icons": [
     {
-      "src": "manifest-icon-192.maskable.png",
+      "src": "/assets/start-bg/manifest-icon-192.maskable.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "manifest-icon-192.maskable.png",
+      "src": "/assets/start-bg/manifest-icon-192.maskable.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "manifest-icon-512.maskable.png",
+      "src": "/assets/start-bg/manifest-icon-512.maskable.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "manifest-icon-512.maskable.png",
+      "src": "/assets/start-bg/manifest-icon-512.maskable.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
