--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-i18next": "^8.1.0",
     "@types/react-router-dom": "^5.3.3",
+    "crypto-js": "^4.2.0",
     "firebase": "^11.0.1",
     "firebase-functions": "^6.2.0",
     "i18next": "^23.16.4",
     "i18next-browser-languagedetector": "^8.0.0",
     "matter-js": "^0.20.0",
+    "nanoid": "^5.0.9",
     "player.style": "^0.0.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
