--- a/functions/package.json
+++ b/functions/package.json
@@ -11,13 +11,14 @@
   "engines": {
     "node": "18"
   },
-  "main": "index.js",
+  "main": "lib/index.js",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "firebase-admin": "^13.0.2",
     "firebase-functions": "^6.2.0",
-    "nanoid": "^5.0.9"
+    "nanoid": "^5.0.9",
+    "openai": "^4.89.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
