--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.1.0",
     "react-lazy-load-image-component": "^1.6.3",
+    "react-markdown": "^10.1.0",
     "react-matter-js": "^1.0.5",
     "react-moment": "^1.1.3",
     "react-redux": "^9.1.2",
@@ -72,11 +73,15 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "copy-index": "cp build/index.html functions/build/index.html",
+    "build": "react-scripts build && npm run copy-index",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "firebase deploy --only hosting",
     "build-deploy": "npm run build && npm run deploy",
+    "build-serve": "cd functions && tsc && cd .. && npm run copy-index",
+    "deploy-serve": "firebase deploy --only functions",
+    "build-deploy-serve": "npm run build-serve && npm run deploy-serve",
     "serve": "npm run build && firebase emulators:start"
   },
   "eslintConfig": {
